--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,11 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/react-query": "^5.89.0",
+    "@tanstack/react-query-devtools": "^5.89.0",
     "antd": "^5.27.4",
     "axios": "^1.12.2",
+    "framer-motion": "^12.23.14",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
